Email Notification activated + Fixed Undefined Index + Fixed Accessibility color contrast

--- a/assets/less/nanosupport-styles.less
+++ b/assets/less/nanosupport-styles.less
@@ -266,6 +266,11 @@ article.ns-single.type-nanosupport{
 }
 .ticket-meta{
   color: #777;
+
+  .label.label-warning{
+    color: #333;
+    cursor: default;
+  }
 }
 .ticket-response-cards{
   padding: 20px;
